--- a/app/assets/stylesheets/modules/navbar.css
+++ b/app/assets/stylesheets/modules/navbar.css
@@ -39,7 +39,7 @@ nav:hover a, nav:hover .signup, nav:hover .login, nav:hover #dropdown1, nav:hove
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  display: -webkit-box;=
+  display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: -moz-box;
