--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -31,14 +31,14 @@
     .flight{:style => "background-image: url(#{image_path flight.album_cover})"}
       %a{:href => "#{flight_path(flight)}"}
         .callsign="#{flight.callsign}"
-
-.profile_forms
-  .col-1-4
-  .col-1-3.friendship_form
-    %h3 Add a friend
-    = render :partial => 'friendships/new'
-  .col-1-3.add_friend_to_flight_form
-    %h3 Add a flight collaborator
-    = render :partial => 'users/add_to_flight', :locals => { :user => @user }
+-if current_user == @user
+  .profile_forms
+    .col-1-4
+    .col-1-3.friendship_form
+      %h3 Add a friend
+      = render :partial => 'friendships/new'
+    .col-1-3.add_friend_to_flight_form
+      %h3 Add a flight collaborator
+      = render :partial => 'users/add_to_flight', :locals => { :user => @user }
 
 
