--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   <body class="bg-tile">
     <nav id="user_div" class="flex-container">
-        <div class="flexbox"><%= link_to "Ascent", flights_path %></div>
+        <div class="flexbox"><%= link_to "Ascent", current_user ? flights_path : welcome_index_path %></div>
         <div class="flexbox"><%= link_to "Create Flight", new_flight_path %></div>
       <% if current_user %>
         <div id="dropdown2" class="flexbox box-right"><i class="fa fa-users fa-2x"></i></div>
