--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -1,10 +1,10 @@
 <%= form_for :user, method: 'PUT', url: {action: 'update'}, :html => {:multipart => true, id: "photo-form"} do |f| %>
   <%= f.hidden_field :id %>
-    <div><p>1</p></div>
+    <div><p>A</p></div>
     <div><%= f.label :remote_avatar_url, "Load From Computer" %></div>
     <div><%= f.file_field :file %></div>
     <div id="or-div">-OR-</div>
-    <div><p>2</p></div>
+    <div><p>B</p></div>
     <div><%= f.label :remote_avatar_url, "Load Image URL" %></div>
     <div><%= f.text_field :remote_avatar_url, id: "url-input",placeholder: "Image URL" %></div>
     <div><%= f.submit "Save Image", id: "avatar-save" %></div>
