--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,7 +1,7 @@
 <header id="flights-header"><h1>Flights</h1></header>
 
 <div id="flights-body">
-  <% if current_user && @friends_flights.present? %>
+  <% if current_user && !@friends_flights.empty? %>
   <div class="flights-row-header">Friends' Flights</div>
   <div id="friends-flights" class="flights-row-body">
     <% @friends_flights.each do |flight| %>
@@ -13,28 +13,28 @@
   <div class="flights-row-header">Most Liked</div>
   <div id="most-liked" class="flights-row-body option">
     <% @most_liked.each do |flight| %>
-    <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
+    <div class="each-flight" style="background: url('<%= flight.cover_photo %>') no-repeat; background-size: cover"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
   </div>
 
   <div class="flights-row-header">Latest</div>
   <div id="latest" class="flights-row-body">
     <% @latest.each do |flight| %>
-    <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
+    <div class="each-flight" style="background: url('<%= flight.cover_photo %>') no-repeat; background-size: cover"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
   </div>
 
   <div class="flights-row-header">Highest Altitude</div>
   <div id="highest-altitude" class="flights-row-body">
     <% @highest_altitude.each do |flight| %>
-    <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
+    <div class="each-flight" style="background: url('<%= flight.cover_photo %>') no-repeat; background-size: cover"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
   </div>
 
   <div class="flights-row-header">Longest Duration</div>
   <div id="longest-duration" class="flights-row-body option">
     <% @longest_duration.each do |flight| %>
-    <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
+    <div class="each-flight" style="background: url('<%= flight.cover_photo %>') no-repeat; background-size: cover"><%= link_to flight.callsign, flight_path(flight) %></div>
     <% end %>
   </div>
 </div>
@@ -42,7 +42,7 @@
 <div class="flights-row-header">Greatest Distance Traveled</div>
 <div id="distance-traveled" class="flights-row-body">
   <% @greatest_distance.each do |flight| %>
-  <div class="each-flight"><%= link_to flight.callsign, flight_path(flight) %></div>
+  <div class="each-flight" style="background: url('<%= flight.cover_photo %>') no-repeat; background-size: cover"><%= link_to flight.callsign, flight_path(flight) %></div>
   <% end %>
 </div>
 
