--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -27,7 +27,7 @@
   display: block;
   width: 100%;
   height: auto;
-  background: rgba(233,45,45,0.05);
+  background: rgba(209, 219, 221,0.3);
   text-align: left;
 }
 .comment_body .head {
