--- a/app/assets/stylesheets/modules/navbar.css
+++ b/app/assets/stylesheets/modules/navbar.css
@@ -150,6 +150,12 @@ hr { margin: 0 }
   background: lightgray;
 }
 /* Sign-up   ------------ */
+#photo-header h1 {
+  font-size: 48px;
+  text-align: center;
+  color: rgb(250,250,250);
+  font-family: 'Armata', sans-serif;
+}
 #signup {
   visibility: 'hidden';
   width: 100%;
@@ -157,7 +163,7 @@ hr { margin: 0 }
   height: 500px;
 }
 #signup header {
-  padding-top: 70px;
+  padding: 70px 0 30px;
   margin: 0;
   overflow: hidden;
 }
@@ -173,7 +179,7 @@ form {
 #signin-username {
   display: block;
   width: 280px;
-  height: 40px;
+  height: 45px;
   margin: 0 auto 12px;
   border: 3px solid gray;
   padding: 0 10px;
@@ -181,7 +187,7 @@ form {
 #signin-password {
   display: block;
   width: 280px;
-  height: 40px;
+  height: 45px;
   margin: 0 auto 12px;
   border: 3px solid gray;
   padding: 0 10px;
