--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -100,6 +100,12 @@
     #autocomplete_username {
       color: black;
     }
+    #autocomplete_username2:focus {
+      border: 2px solid grey;
+    }
+    #autocomplete_username2 {
+      color: orange;
+    }
   }
 }
 
