--- a/app/views/friendships/_new.html.haml
+++ b/app/views/friendships/_new.html.haml
@@ -1,8 +1,8 @@
-=form_for :friendship, method: 'POST', url: {action: 'create'}, class: 'ui-widget' do |f|
+=form_for :friendship, method: 'POST', url: {controller: 'friendships', action: 'create'}, class: 'ui-widget' do |f|
   =f.autocomplete_field :username, autocomplete_username_users_path, id: 'autocomplete_username', placeholder: 'username'
   %br
   %br
-  =f.submit 'Send Friend Request' , class: 'button'
+  =f.submit 'Send Friend Request', class: 'button', id: 'send-fr'
 
 
 
