--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -36,7 +36,7 @@
     .col-1-4
     .col-1-3.friendship_form
       %h3 Add a friend
-      = render :partial => 'friendships/new'
+      = render :partial => 'friendships/new', :locals => { :friendship => @friendship}
     .col-1-3.add_friend_to_flight_form
       %h3 Add a flight collaborator
       = render :partial => 'users/add_to_flight', :locals => { :user => @user }
