changed font color to white for flash messages

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -1,3 +1,11 @@
+#flash_notice {
+  padding-top: 10px;
+  color: white;
+}
+#flash_error {
+  padding-top: 10px;
+  color: red;
+}
 h2 {
   font-family: 'Codystar', cursive;
   font-size: 2em;
