--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,4 +1,5 @@
-#welcome-header
-  %h1 Ascent
+#jumbotron
+  #welcome-header
+    %h1 Ascent
 
-%article "We strive to get high."
+  %article "We strive to get high."
