--- a/app/views/friendships/_new.html.haml
+++ b/app/views/friendships/_new.html.haml
@@ -4,5 +4,8 @@
   %br
   =f.submit 'Send Friend Request', class: 'button', id: 'send-fr'
 
-
-
+/ =form_for :friendship, method: 'POST', url: {action: 'create'}, class: 'ui-widget' do |f|
+/   =f.autocomplete_field :username, autocomplete_username_users_path, id: 'autocomplete_username', placeholder: 'Username'
+/   %br
+/   %br
+/   =f.submit 'Send Friend Request' , id: 'fr-request'
