--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -6,7 +6,7 @@
     <div id="or-div">-OR-</div>
     <div><p>B</p></div>
     <div><%= f.label :remote_avatar_url, "Load Image URL" %></div>
-    <div><%= f.text_field :remote_avatar_url, id: "url-input",placeholder: "Image URL" %></div>
+    <div><%= f.text_field :remote_avatar_url, id: "url-input2",placeholder: "Image URL" %></div>
     <div><%= f.submit "Save Image", id: "avatar-save" %></div>
-    <div><%= f.submit "Cancel Avatar Upload", id: "avatar-cancel" %></div>
+    <div><%= f.submit "Cancel", id: "avatar-cancel" %></div>
 <% end %>
