--- a/app/assets/stylesheets/flights-index.css
+++ b/app/assets/stylesheets/flights-index.css
@@ -31,13 +31,12 @@
   font-size: 18px;
 }
 .each-flight a {
+  display: block;
   font-family: 'Armata', sans-serif;
   color: black;
   text-decoration: none;
   font-size: 20px;
-  height: 100%;
-  width: 100%;
-  padding-top: 25px;
+  background-color: rgba(220,220,220,0.5);
 }
 .flights-row-body {
   position: relative;
