--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,8 +58,9 @@
       <% end %>
     </nav>
     <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <%= content_tag :div, msg, :class => name %>
     <% end %>
+
 
     <div class="container">
       <%= yield %>
