--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -1,9 +1,12 @@
 #main-container
+  %br
   %h1.chart_header
     %a
       #star
         %i.fa.fa-star{:id => @flight.liked?(current_user) ? 'liked' : 'not_liked'}
     ="#{@flight.callsign}"
+  %br
+  %br
   %grid{:class => 'grid-pad'}
     %div{:class => 'col-1-3'}
       %centered
@@ -54,22 +57,25 @@
             #gauge_7_info
 
     %div{:class => 'col-2-3'}
-      %div.flight_chart
-        = render :partial => 'data_visualizations/index'
-
-      #below_chart
-        %grid
-          %grid{:class => 'col-3-4'}
-            #comment_display
-              %p
-          %grid{:class => 'col-1-4'}
-            %button#chart_map_button MAP
-            %button#button-play
-              %i.fa.fa-play
-      #gauge_3
-      #gauge_1
-      #gauge_4
-      #gauge_5
+      %div{:class => 'col-3-4'}
+        %div.flight_chart
+          = render :partial => 'data_visualizations/index'
+        %br
+        #below_chart
+          %div{:id => 'under-chart'}
+            %div{:class => 'col-3-4'}
+              #comment_display
+                %p
+              #gauge_3{:class => 'col-1-3'}
+              #gauge_4{:class => 'col-1-3'}
+              %div{:class => 'col-1-3'}
+                %button#button-play
+                  %i.fa.fa-play
+            %div{:class => 'col-1-4'}
+              %button#chart_map_button MAP
+      %div{:class => 'col-1-4'}
+        #gauge_1
+        #gauge_5
 
 #photo-container
   %header#photo-header
