--- a/app/views/users/_add_to_flight.html.haml
+++ b/app/views/users/_add_to_flight.html.haml
@@ -9,4 +9,4 @@
       %br
       %input{name: 'username2', id: 'autocomplete_username2', placeholder: 'username'}
       %p
-        = f.submit "Add To flight", id: "add-to-flight"
+        = f.submit "Add To flight", id: "add-to-flight", class: 'button'
