moved tweet, map button, play button

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -11,6 +11,13 @@ h2 {
   font-size: 2em;
 }
 
+
+#map-tweet {
+  width: 41.5%;
+  margin: 0 auto
+}
+
+
 h3 {
   font-family: 'Codystar', cursive;
   font-size: 1em;
