--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -6,7 +6,10 @@
         %i.fa.fa-star{:id => @flight.liked?(current_user) ? 'liked' : 'not_liked'}
     ="#{@flight.callsign}"
   %br
-  %br
+  %div#map-tweet
+    %button#chart_map_button MAP
+
+
   %grid{:class => 'grid-pad'}
     %div{:class => 'col-1-3'}
       %centered
@@ -33,7 +36,11 @@
             %td.tdleft Trip Duration
             %td.tdright
               ="#{@flight.duration}"
-        =tweet_button(via: "Ascent", text: "Check out this flight! ##{@flight.callsign}", count: "horizontal")
+          %tr
+            %td.tdleft
+              #tweeter
+                %br
+                =tweet_button(via: "Ascent", text: "Check out this flight! ##{@flight.callsign}", count: "horizontal")
         #photos-div
           %button#photo-add Add
           %i.fa.fa-picture-o.fa-2x
@@ -66,13 +73,11 @@
             %div{:class => 'col-3-4'}
               #comment_display
                 %p
-              #gauge_3{:class => 'col-1-3'}
-              #gauge_4{:class => 'col-1-3'}
-              %div{:class => 'col-1-3'}
-                %button#button-play
-                  %i.fa.fa-play
             %div{:class => 'col-1-4'}
-              %button#chart_map_button MAP
+              %button#button-play
+                %i.fa.fa-play
+            #gauge_3{:class => 'col-1-2'}
+            #gauge_4{:class => 'col-1-2'}
       %div{:class => 'col-1-4'}
         #gauge_1
         #gauge_5
