added border to comment on datapoint

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -93,6 +93,7 @@ tr input[type="submit"]:hover {
   background: lightgray;
 }
 #comment_display {
+  border: 1px solid white;
   text-align: left;
   height: 30px;
   width: 90%;
