--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,4 +2,4 @@
   #welcome-header
     %h1 Ascent
 
-  %article "We strive to get high."
+  %article "Connecting young minds to near space adventures."
