image files added to assets

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -11,6 +11,12 @@ h2 {
   font-size: 2em;
 }
 
+#main-picture {
+  width: 100%;
+  min-hight: 600px;
+  background: url(ascent-icon-black.png) no-repeat;
+}
+
 
 #map-tweet {
   width: 41.5%;
