--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,3 @@
-#jumbotron
-  #welcome-header
-    %h1 Ascent
-
+#main-picture
+  %img{src: "url(ascent-icon-black.png)"}
   %article "Connecting young minds to near space adventures."
