--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -3,6 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #jumbotron {
+  background-color: #1e1e1e;
+  height: 100%;
 }
 
 #welcome-header {
