--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,9 +58,8 @@
       <% end %>
     </nav>
     <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :class => name %>
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
     <% end %>
-
 
     <div class="container">
       <%= yield %>
