--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -11,4 +11,4 @@
     <div><%= f.text_field :remote_image_url, id: "url-input",placeholder: "Image URL" %></div>
     <div><%= f.submit "Save Image", id: "photo-save" %></div>
 <% end %>
-<div id="contain1"><%= link_to "Skip Photo Upload", flight_path(@flight), class: "links_bottom" %></div>
+<div id="contain1"><%= link_to "Skip Photo Upload", flight_path(1), class: "links_bottom" %></div>
