--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,5 @@
 #jumbotron
-  #welcome-header
-    %h1 Ascent
+  %img{:src => '/assets/ascent-icon-black.png'}
 
-  %article "Connecting young minds to near space adventures."
+
+  %article Connecting young minds to near space adventures.
