--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -93,9 +93,8 @@ tr input[type="submit"]:hover {
   background: lightgray;
 }
 #comment_display {
-  border: 1px solid white;
-  text-align: left;
-  height: 30px;
+  text-align: center;
+  height: 35px;
   width: 90%;
   color: white;
   margin-left: 5%;
