--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,4 @@
 #jumbotron
-  %img{:src => '/assets/ascent-icon-black.png'}
-
+  %img{:src => image_path('ascent-icon-black.png')}
 
   %article Connecting young minds to near space adventures.
