--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -1,7 +1,7 @@
 <%= form_for :user, method: 'PUT', url: {action: 'update'}, :html => {:multipart => true, id: "photo-form"} do |f| %>
   <%= f.hidden_field :id %>
     <div><p>A</p></div>
-    <div><%= f.label :remote_avatar_url, "Load From Computer" %></div>
+    <div><%= f.label :avatar, "Load From Computer" %></div>
     <div><%= f.file_field :file %></div>
     <div id="or-div">-OR-</div>
     <div><p>B</p></div>
