--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for :picture, method: 'POST', url: {action: 'create'}, :html => {:multipart => true, id: "photo-form"} do |f| %>
   <%= f.hidden_field :flight_id %>
     <div><p>A</p></div>
-    <div><%= f.label :remote_image_url, "Load From Computer" %></div>
+    <div><%= f.label :image, "Load From Computer" %></div>
     <div><%= f.file_field :files, multiple: true %></div>
     <div id="or-div">-OR-</div>
     <div><p>B</p></div>
