--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -136,16 +136,20 @@ table {
 }
 
 #gauge_5 {
-  position: absolute;
-  width: 320px;
-  height: 320px;
+//  position: absolute;
+//  width: 320px;
+//  height: 320px;
+
+  display: block;
+  margin: auto;
+  margin-right: -30px;
 }
 
 #gauge_3, #gauge_4 {
   margin-top: 20px;
-  display: inline-block;
-  width: 300px;
-  height: 400px;
+  display: block;
+//  width: 300px;
+//  height: 400px;
   }
 
 
